# se-toolkit-lab-8

./: pyproject.toml
backend/src/lms_backend/routers/: items.py
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  server.py  settings.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
